--- a/src/Components/frame/Header/header.scss
+++ b/src/Components/frame/Header/header.scss
@@ -1,8 +1,18 @@
-header{
+header {
     height: 80px;
     background-color: #333;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 0px 20px;
+    justify-content: space-between;
+
+    .wrapper {
+        margin: auto;
+        position: relative;
+        max-width: 1200px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px 30px;
+    }
 }
