--- a/src/Components/frame/Header/header.scss
+++ b/src/Components/frame/Header/header.scss
@@ -1,6 +1,6 @@
 header {
     height: 80px;
-    background-color: #333;
+    background-color: #222;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,5 +14,12 @@ header {
         justify-content: space-between;
         align-items: center;
         padding: 0px 30px;
+    }
+
+    .header-title {
+        font-size: 32px;
+        font-family: "Leckerli One", cursive;
+        font-style: normal;
+        color: white;
     }
 }
