--- a/src/Components/frame/Header/header.scss
+++ b/src/Components/frame/Header/header.scss
@@ -1,15 +1,19 @@
 header {
+    max-width: 1450px;
+    width: 100%;
     height: 80px;
-    background-color: #222;
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    overflow-y: hidden;
+    top: 0px;
+    z-index: 9999;
+    margin: 0px auto;
 
     .wrapper {
         margin: auto;
         position: relative;
-        max-width: 1200px;
-        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -21,5 +25,11 @@ header {
         font-family: "Leckerli One", cursive;
         font-style: normal;
         color: white;
+    }
+}
+
+@media (max-width: 600px) {
+    header {
+        display: none;
     }
 }
