--- a/src/Components/page/aboutme/aboutme.scss
+++ b/src/Components/page/aboutme/aboutme.scss
@@ -51,16 +51,16 @@
 
     .intro-btn {
         display: flex;
-        justify-content: space-between;
-        margin-top: 40px;
+        gap: 0px 20px;
+        flex: 1 1 auto;
+        flex-direction: row;
 
         button {
+            margin-top: 50px;
             background-color: white;
-            width: 49%;
-            min-width: 300px;
-            gap: 20px !important;
-            color: black;
-            font-weight: 700;
+            color: #121212;
+            font-weight: bold;
+            width: 100%;
         }
     }
 
