--- a/src/global/main.scss
+++ b/src/global/main.scss
@@ -72,22 +72,14 @@ section {
 }
 
 .second-snap {
-  background: linear-gradient(0deg, #141414, #000000);
+  background: linear-gradient(to top,
+      rgba(0, 0, 0, 0.25) 5%,
+      rgba(0, 0, 0, 0.5) 50%,
+      rgba(0, 0, 0, 0.75) 75%,
+      rgba(0, 0, 0, 1) 100%);
 }
 
-.third-snap {
-  background: linear-gradient(180deg, #141414, #000000);
-}
-
-.fourth-snap {
-  background: linear-gradient(180deg, #141414, #000000);
-}
-
-.sixth-snap {
-  background: linear-gradient(0deg, #141414, #000000);
-}
-
-.seven-snap {
+.fifth-snap {
   background: linear-gradient(to top,
       rgba(0, 0, 0, 0) 10%,
       rgba(0, 0, 0, 0.25) 5%,
