--- a/src/Components/page/aboutme/aboutme.scss
+++ b/src/Components/page/aboutme/aboutme.scss
@@ -61,6 +61,11 @@
             color: #121212;
             font-weight: bold;
             width: 100%;
+
+            &:hover {
+                opacity: 1;
+                box-shadow: 0 0px 40px rgba(255, 255, 255, 0.3), 0 10px 15px rgba(255, 255, 255, 0.22);
+            }
         }
     }
 
