--- a/src/global/main.scss
+++ b/src/global/main.scss
@@ -15,6 +15,11 @@ body {
   position: relative;
   overflow: visible;
   overflow-x: hidden !important;
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
 }
 
 main {
@@ -46,6 +51,10 @@ section {
   max-width: 1400px;
   margin: auto;
   padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .scroll-container {
@@ -80,6 +89,14 @@ section {
 }
 
 .fifth-snap {
+  background: linear-gradient(to top,
+      rgba(0, 0, 0, 0.25) 5%,
+      rgba(0, 0, 0, 0.5) 50%,
+      rgba(0, 0, 0, 0.75) 75%,
+      rgba(0, 0, 0, 1) 100%);
+}
+
+.last-snap {
   background: linear-gradient(to top,
       rgba(0, 0, 0, 0) 10%,
       rgba(0, 0, 0, 0.25) 5%,
