--- a/src/Components/page/TechStack/TechStack.scss
+++ b/src/Components/page/TechStack/TechStack.scss
@@ -4,24 +4,66 @@
         flex: 1 1 auto;
         flex-wrap: wrap;
         gap: 20px;
+        position: relative;
+        overflow: hidden;
+        /* 박스가 확장할 공간을 확보 */
 
         .box {
             width: 100%;
-            max-width: 800px;
-            min-width: 400px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 20px;
 
-            .skill-box {
-                margin: 10px;
-                padding: 10px;
-                background-color: #ccc;
-                color: #fff;
+            .stackItem {
                 position: relative;
-                overflow: hidden;
+                padding: 10px;
+                background-color: #eee;
                 cursor: pointer;
+                color: black;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                width: 100%;
+                height: 60px;
+                box-sizing: border-box;
+                overflow: hidden;
+                transition: height 0.7s ease;
 
-                .skill-box:hover .description {
+                .title {
+                    display: flex;
+                    align-items: center;
+                    width: 100%;
+                    margin-bottom: 10px;
+                }
+
+                img {
+                    width: 40px;
+                    height: 40px;
+                    margin-right: 10px;
+                }
+
+                .description {
+                    color: black;
+                    white-space: normal;
+                    opacity: 0;
+                    overflow: hidden;
+                    transition: opacity 0.3s ease, transform 0.3s ease;
+                    transform: translateY(10px);
+                    /* 기본 상태에서 아래로 약간 이동 */
+                    width: calc(100% - 20px);
+                    /* 여백을 고려한 너비 설정 */
+                }
+
+                &:hover {
+                    z-index: 10;
+                    height: 200px;
+                    /* 마우스 오버 시 높이 확장 */
+                }
+
+                &:hover .description {
                     opacity: 1;
-                    visibility: visible;
+                    transform: translateY(0);
+                    /* 설명이 기본 위치로 이동 */
                 }
             }
         }
