--- a/src/Components/page/TechStack/TechStack.scss
+++ b/src/Components/page/TechStack/TechStack.scss
@@ -51,7 +51,7 @@
                     white-space: normal;
                     opacity: 0;
                     overflow: hidden;
-                    transition: opacity 1s ease, transform 1s ease;
+                    transition: opacity 0.5s;
                     transform: translateY(10px);
                 }
 
