--- a/src/Components/page/TechStack/TechStack.scss
+++ b/src/Components/page/TechStack/TechStack.scss
@@ -8,7 +8,7 @@
         .box {
             width: 100%;
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             gap: 10px;
 
             .stackItem {
@@ -51,7 +51,8 @@
 
                 &:hover {
                     z-index: 10;
-                    height: 100%;                }
+                    height: 170px;
+                }
 
                 &:hover .description {
                     opacity: 1;
