--- a/src/Components/page/aboutme/aboutme.scss
+++ b/src/Components/page/aboutme/aboutme.scss
@@ -6,7 +6,7 @@
         .avatar-img {
             max-width: 350px;
             width: 100%;
-            min-width: 300px;
+            min-width: 250px;
             border-radius: 50%;
             margin: 0 auto;
         }
@@ -43,17 +43,16 @@
     }
 
     .intro-btn {
-        display: flex;
-        gap: 0px 20px;
-        flex: 1 1 auto;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 10px;
 
         button {
             margin-top: 50px;
             background-color: white;
             color: #121212;
             font-weight: bold;
-            width: 100%;
+            flex-flow: 1;
 
             &:hover {
                 opacity: 1;
@@ -72,10 +71,12 @@
         .dong-info {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
+            margin-bottom: 20px;
 
             .info-box {
                 width: 200px;
-                margin-top: 20px;
+                margin-top: 10px;
+                margin-bottom: 10px;
 
                 .text {
                     .question {
@@ -90,5 +91,77 @@
                 }
             }
         }
+
+        .intro-btn {
+            display: grid;
+            grid-template-columns: repeat(1, 2fr);
+            gap: 10px;
+
+            button {
+                margin-top: 0px;
+                margin-bottom: 10px;
+                background-color: white;
+                color: #121212;
+                font-weight: bold;
+                flex-flow: 1;
+
+                &:hover {
+                    opacity: 1;
+                    box-shadow: 0 0px 40px rgba(255, 255, 255, 0.3), 0 10px 15px rgba(255, 255, 255, 0.22);
+                }
+            }
+        }
+
+    }
+}
+
+@media (max-width:600px) {
+    .aboutmebox {
+        align-items: center;
+
+        .dong-info {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            margin-bottom: 20px;
+
+            .info-box {
+                width: 200px;
+                margin-top: 10px;
+                margin-bottom: 10px;
+
+                .text {
+                    .question {
+                        font-weight: bolder;
+                        font-size: 16px;
+                    }
+
+                    .answer {
+                        font-weight: normal;
+                        font-size: 14px !important;
+                    }
+                }
+            }
+        }
+
+        .intro-btn {
+            display: grid;
+            grid-template-columns: repeat(1, 2fr);
+            gap: 10px;
+
+            button {
+                margin-top: 0px;
+                margin-bottom: 10px;
+                background-color: white;
+                color: #121212;
+                font-weight: bold;
+                flex-flow: 1;
+
+                &:hover {
+                    opacity: 1;
+                    box-shadow: 0 0px 40px rgba(255, 255, 255, 0.3), 0 10px 15px rgba(255, 255, 255, 0.22);
+                }
+            }
+        }
+
     }
 }
