--- a/src/Components/page/archive/archive.scss
+++ b/src/Components/page/archive/archive.scss
@@ -7,9 +7,9 @@
         margin-top: 50px;
 
         .box {
-            flex: 1 1 400px;
-            min-width: 400px;
-            height: 400px;
+            flex: 1 1 350px;
+            min-width: 350px;
+            height: 450px;
             width: 100%;
             background-color: rgb(230, 230, 230);
             border-radius: 15px;
@@ -51,6 +51,27 @@
                         color: blue;
                     }
                 }
+            }
+        }
+    }
+}
+
+@media(max-width:400px) {
+    .archive-section {
+        .archive-box {   
+            .box {
+                flex: 1 1 300px;
+                min-width: 300px;
+                height: 100%;
+                width: 100%;
+                background-color: rgb(230, 230, 230);
+                border-radius: 15px;
+                padding: 15px;
+                .icon-item,
+                .icon-description {
+                    font-size: 14px;
+                }
+
             }
         }
     }
