--- a/src/global/main.scss
+++ b/src/global/main.scss
@@ -49,7 +49,7 @@ main {
 
 section {
   margin: 0 auto;
-  min-height: calc(100vh - 0px); 
+  min-height: calc(100vh - 0px);
   max-width: 1200px;
   margin: auto;
   padding: 30px;
@@ -106,16 +106,44 @@ section {
   font-size: 4rem !important;
 }
 
+.mobile-btn {
+  display: none;
+}
+
+.dialog-img {
+  max-width: 550px;
+  min-width: 250px;
+  width: 100%;
+  margin: 10px auto;
+  display: flex;
+  justify-content: center;
+}
+
 @media (max-width: 600px) {
   .arrow-icon {
     font-size: 30px;
   }
 
   .title {
-    font-size: 4rem !important;
+    font-size: 3rem !important;
   }
 
   .scroll-hide {
     height: 50px;
+  }
+
+  .web-btn {
+    display: none !important;
+  }
+
+  .dialog-title {
+    font-size: 16px !important;
+  }
+
+  .mobile-btn {
+    margin: 20px 20px !important;
+    width: 80%;
+    display: flex;
+    justify-content: center;
   }
 }
