--- a/src/Components/page/TechStack/TechStack.scss
+++ b/src/Components/page/TechStack/TechStack.scss
@@ -22,13 +22,11 @@
                 align-items: flex-start;
                 width: 100%;
                 max-height: 60px;
-                /* height 대신 max-height 사용 */
+                /* 기본 높이 */
                 border-radius: 16px;
                 box-sizing: border-box;
                 overflow: hidden;
-                transition: max-height 0.1s ease-in-out;
-                will-change: max-height, box-shadow;
-                /* 성능 최적화를 위한 will-change 추가 */
+                transition: max-height 0.4s ease-in-out, box-shadow 0.3s ease-in-out;
 
                 .title {
                     display: flex;
@@ -44,24 +42,24 @@
                 }
 
                 .description {
-                    color: black;
-                    white-space: normal;
                     opacity: 0;
-                    overflow: hidden;
-                    transition: opacity 0.3s ease-in-out;
                     transform: translateY(10px);
+                    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+                    max-height: 0;
                 }
 
                 &:hover {
-                    z-index: 10;
                     max-height: 170px;
-                    /* height 대신 max-height 변경 */
+                    /* 호버 시 높이 증가 */
                     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+                    /* 호버 시 그림자 */
                 }
 
                 &:hover .description {
                     opacity: 1;
                     transform: translateY(0);
+                    max-height: 100px;
+                    /* 설명에 대한 최대 높이 */
                 }
             }
         }
