--- a/src/Components/page/archive/archive.scss
+++ b/src/Components/page/archive/archive.scss
@@ -1,16 +1,19 @@
 .archive-section {
+
     .archive-box {
         display: flex;
         flex-wrap: wrap;
-        gap: 20px;
+        flex-direction: row;
+        gap: 10px;
         align-items: center;
         margin-top: 50px;
+        max-width: 1500px;
 
         .box {
-            flex: 1 1 350px;
             min-width: 350px;
             height: 450px;
             width: 100%;
+            max-width: 470px;
             background-color: rgb(230, 230, 230);
             border-radius: 15px;
             padding: 15px;
