--- a/src/Components/page/archive/archive.scss
+++ b/src/Components/page/archive/archive.scss
@@ -3,16 +3,16 @@
 
     .archive-box {
         display: flex;
-        flex-direction: row;
         gap: 10px;
         align-items: center;
         margin-top: 50px;
+        flex-flow: row wrap;
+        justify-content: center;
 
         .box {
-            min-width: 350px;
+            min-width: 400px;
             height: 450px;
-            width: 100%;
-            max-width: 470px;
+            flex: 1;
             background-color: rgb(230, 230, 230);
             border-radius: 15px;
             padding: 15px;
