--- a/src/Components/frame/Header/header.scss
+++ b/src/Components/frame/Header/header.scss
@@ -10,6 +10,7 @@ header {
     top: 0px;
     z-index: 9999;
     margin: 0px auto;
+    position: absolute;
 
     .wrapper {
         margin: auto;
