--- a/src/global/main.scss
+++ b/src/global/main.scss
@@ -73,7 +73,7 @@ section {
 }
 
 .first-snap {
-  min-height: calc(100vh - 80px);
+  min-height: calc(100vh - 0px);
   transition: background 0.5s ease;
   background: linear-gradient(180deg, #000000, #000000);
 }
@@ -130,4 +130,37 @@ section {
   .dialog-title {
     font-size: 16px !important;
   }
+}
+
+// scroll bar 
+html::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+html::-webkit-scrollbar-thumb {
+  outline: none;
+  border-radius: 10px;
+  border: 3px solid transparent;
+  box-shadow: inset 6px 6px 0;
+}
+
+html::-webkit-scrollbar-track {
+  box-shadow: none;
+  background-color: transparent;
+}
+
+// modal scrollbar
+.scrollbar::-webkit-scrollbar {
+  width: 5px;
+  height: 12px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  background: rgb(255, 255, 255);
+  border-radius: 10px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  background: rgba(220, 20, 60, .1);
 }
