--- a/src/Components/page/career/career.scss
+++ b/src/Components/page/career/career.scss
@@ -1,13 +1,14 @@
 .career {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    display: flex;
     gap: 30px;
+    flex-wrap: wrap;
 
     .career-logo {
-        width: 100%;
-        height: 100%;
-        max-width: 350px;
-        max-height: 350px;
+        flex: 1;
+        width: 80%;
+        height: 80%;
+        max-width: 300px;
+        max-height: 300px;
         background-color: white;
         border-radius: 50%;
         display: flex;
@@ -23,6 +24,7 @@
     }
 
     .career-text {
+        flex: 1;
         border-left: 2px solid white;
         padding: 10px 20px;
 
@@ -45,6 +47,29 @@
                 padding: 20px 0px;
                 font-weight: bold;
             }
+        }
+    }
+}
+
+// 800px 이하일 때 방향을 위아래로 변경
+@media screen and (max-width: 800px) {
+    .career {
+        flex-direction: column;
+        align-items: center;
+
+        .career-logo {
+            border-radius: 20%;
+
+            .career-text {
+                width: 100%;
+                max-width: none;
+            }
+        }
+
+        .career-text {
+            border-top: 2px solid white;
+            border-left: none;
+            padding-top: 20px;
         }
     }
 }
