--- a/src/Components/page/career/career.scss
+++ b/src/Components/page/career/career.scss
@@ -5,8 +5,7 @@
 
     .career-logo {
         flex: 1;
-        width: 80%;
-        height: 80%;
+        padding: 20px;
         max-width: 300px;
         max-height: 300px;
         background-color: white;
@@ -52,7 +51,7 @@
 }
 
 // 800px 이하일 때 방향을 위아래로 변경
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
     .career {
         flex-direction: column;
         align-items: center;
